test(http): add http unit tests
